objects/GEMS_Error_Log__c.object
<CustomObject>
    <fields>
        <fullName>Class__c</fullName>
        <description>the CLass from which error is thrown.</description>
        <label>Class</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Error_Detail__c</fullName>
        <label>Error Detail</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Error_Message__c</fullName>
        <label>Error Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Error_Severity__c</fullName>
        <description>Severity of the Exception</description>
        <label>Error Severity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Line_Number__c</fullName>
        <description>Line number of the class on which error occurs</description>
        <label>Line Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Origin__c</fullName>
        <description>Origin of the Exception</description>
        <label>Origin</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SObject_Name__c</fullName>
        <description>Name of the Sobject</description>
        <label>SObject Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Send_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Should the exception mail be send or not.</description>
        <label>Send Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Shared_With__c</fullName>
        <description>This field is used by the custom sharing logic to indicate with whom was the failed record shared with.</description>
        <label>Shared With</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shared_sObject_Id__c</fullName>
        <description>This field captures the sObject Id of the record that was going to be shared.</description>
        <label>Shared sObject Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sharing_Event_Type__c</fullName>
        <description>This field will capture if the sharing event was delete or insert.</description>
        <label>Sharing Event Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Trigger__c</fullName>
        <description>Trigger from which error is thrown</description>
        <label>Trigger</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>GEMS Error Log</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>GEMS Error Log Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>GEMS Error Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>